<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_donation_summary">Get donation package for additional features</string>
    <string name="about_donation_title">Donate</string>
    <string name="about_licenses_title">Licences</string>
    <string name="about_raise_your_voice_program_summary">Your voice can make a difference!</string>
    <string name="about_raise_your_voice_program_title">\"Raise Your Voice!\" program</string>
    <string name="about_translation_credit">(Place name of primary translators here for credit)</string>
    <string name="about_translation_title">Translation</string>
    <string name="about_uninstall">Uninstall</string>
    <string name="about_version_summary">Rate this app.</string>
    <string name="about_version_title">Version</string>
    <string name="guide_btn_activate_module">Activate module, Reboot</string>
    <string name="guide_btn_install_xposed_installer">Install \"Xposed Installer\"</string>
    <string name="guide_btn_setup_xposed_framework">Setup Xposed framework</string>
    <string name="guide_link_why_xposed">Why need Xposed framework?</string>
    <string name="guide_sub_title">Powerful modding framework</string>
    <string name="guide_title">Xposed Setup Guide</string>
    <string name="menu_about">About</string>
    <string name="menu_action_cutoff">Cut off wake-up path</string>
    <string name="menu_action_cutoff_condensed">Cut off</string>
    <string name="menu_action_greenify">Greenify Wizard</string>
    <string name="menu_action_greenify_condensed">Greenify…</string>
    <string name="menu_action_hibernate">Put into hibernation now</string>
    <string name="menu_action_hibernate_condensed">Hibernate</string>
    <string name="menu_action_hide">Hide</string>
    <string name="menu_action_pick">Pick an app to greenify</string>
    <string name="menu_action_pick_condensed">Pick App</string>
    <string name="menu_action_reattach">Reattach its wake-up paths</string>
    <string name="menu_action_reattach_condensed">Reattach</string>
    <string name="menu_action_reconsider_state">Reconsider its state</string>
    <string name="menu_action_refresh">Refresh</string>
    <string name="menu_action_run">Run</string>
    <string name="menu_action_ungreenify">Degreenify selected app</string>
    <string name="menu_action_ungreenify_condensed">Degreenify</string>
    <string name="menu_action_unhide_all">Show all</string>
    <string name="menu_create_shortcut">Create hibernation shortcut</string>
    <string name="menu_disable_service">Disable auto-hibernation</string>
    <string name="menu_enable_service">Enable auto-hibernation</string>
    <string name="menu_reset_gesture">Reset \"pull-up\" gesture</string>
    <string name="prefs_cat_donation_only_features">Require Donation Package</string>
    <string name="prefs_labs_automated_hibernation_title">Automated hibernation</string>
    <string name="prefs_labs_block_notification_abuse_summary">Some apps exploit a vulnerability of Android (before 4.3) to gain unfair priority to keep in memory in low-memory situation. Those apps will be false recognized as \"Perceptible\" in Greenify and not hibernating.</string>
    <string name="prefs_labs_block_notification_abuse_title">Block App State Abuse</string>
    <string name="prefs_labs_gcm_push_summary">"Allow GCM push message to wake up hibernated apps, except if its notification is disabled in system (Settings - Apps).
Please also enable \"Don't Remove Notifications\" to avoid losing notifications after re-hibernation."</string>
    <string name="prefs_labs_gcm_push_title">GCM push for greenified apps</string>
    <string name="prefs_labs_reveal_hidden_sync_title">Reveal Hidden Sync</string>
    <string name="prefs_labs_system_apps_limited_title">Greenifying system apps</string>
    <string name="prefs_labs_system_apps_summary">Deprive system apps of immunity to hibernation, make most of them greenifiable.</string>
    <string name="prefs_labs_system_apps_title">Greenifying system apps</string>
    <string name="prefs_labs_telephony_wakeup_summary">Allow telephony events (like call, SMS) to wake up hibernated apps, thus greenified call or SMS-aware apps working as expected.</string>
    <string name="prefs_labs_telephony_wakeup_title">Telephony Wakeup</string>
    <string name="prefs_labs_timer_coalescing_summary">Coalesce periodic CPU wake-up timer for all apps (not just apps designed for 4.4+), to reduce battery waste in dispersive CPU wake-ups. (Requires Android 4.4+)</string>
    <string name="prefs_labs_timer_coalescing_title">Wakeup Timer Coalescing (4.4+)</string>
    <string name="prefs_labs_wakeup_tracker_summary">Track which app explicitly woke your greenified apps, and optionally cut off the wake-up path to eliminate further wake-ups.</string>
    <string name="prefs_labs_wakeup_tracker_title">Wake-up Tracker</string>
    <string name="prefs_labs_working_mode_title">Working Mode</string>
    <string name="showcase_accessibility_setting">Enable Automation</string>
    <string name="showcase_manual_hibernation_automation">This manual process can be automated via an accessibility service provided with Greenify.</string>
    <string name="showcase_manual_hibernation_desc">In non-root mode, hibernation has to be performed in this way due to restriction of Android system. Please click the \"Force stop\" button above to finish hibernation.</string>
    <string name="showcase_manual_hibernation_title">Manual Hibernation</string>
    <string name="wizard_step_enjoy">Enjoy</string>
    <string name="wizard_step_enjoy_desc">smooth and lasting experience just like on the first day.</string>
    <string name="wizard_step_forget">Forget (ROOT only)</string>
    <string name="wizard_step_forget_desc">about house keeping, let Greenify silently do it for you.</string>
    <string name="wizard_step_greenify">Greenify</string>
    <string name="wizard_step_greenify_desc">battery leeching, memory hogging and stealthily running apps.</string>
    <string name="prefs_labs_automated_hibernation_summary">For non-root mode, automate the hibernation minutes after screen goes off. It will light up the screen, perform the hibernation and then turn off the screen. (Requires Android 4.1+, Accessibility, Device Admin and insecure key-guard)</string>
    <string name="prefs_labs_deep_hibernation_summary">"Enforce aggressive policies to hibernated apps, stopping them from being woken by other apps.
WARNING: may break cross-app functionality of hibernated apps!"</string>
    <string name="prefs_labs_deep_hibernation_title">Deep Hibernation (alpha)</string>
    <string name="prefs_labs_no_remove_notifications_limited_summary">"Don't remove notifications when app hibernates (only while screen is off), so you could read notifications afterward. Status bar icon of the original notification cannot be preserved, due to privilege restriction. The Xposed-based version of this feature below has no such limitation."</string>
    <string name="prefs_labs_no_remove_notifications_limited_title">"Don't Remove Notifications (limited)"</string>
    <string name="prefs_labs_no_remove_notifications_summary">"Don't remove notifications when app hibernates, so you could read notifications afterward."</string>
    <string name="prefs_labs_no_remove_notifications_title">"Don't Remove Notifications"</string>
    <string name="prefs_labs_reveal_hidden_sync_summary">Reveal hidden account sync tasks in \"Settings - Accounts\", prefixed with \"*\".</string>
    <string name="prefs_labs_system_apps_limited_summary">Deprive some system apps of immunity to hibernation, make them greenifiable. Due to technical limitation, hibernated system apps may not always stay in hibernation as non-system apps.</string>
    <string name="menu_settings">Settings</string>
    <string name="prefs_cat_about">About</string>
    <string name="prefs_labs_doze_title">Aggressive Doze (experimental)</string>
    <string name="prefs_labs_navbar_gesture_title">Long-press action on nav-bar</string>
    <string name="prefs_learn_more">Learn more (online)</string>
    <string name="prefs_shallow_hibernation_description">"Shallow hibernation is an entirely new hibernation mechanism built exclusively for Android 6.0+, with better compatibility and efficiency.

Apps will no longer be killed in shallow hibernation, with interaction context preserved for snappier task switching, while all the background behaviors are still strictly prohibited during hibernation.

Shallow-hibernated apps will be woken for a brief time periodically in hours and immediately upon HIGH priority GCM push (only if GCM priority is implemented by app developer). They will also keep awake during charging.

If enabled, shallow hibernation replaces the classic hibernation mechanism throughout Greenify.

This feature is NOT suggested for low memory device."</string>
    <string name="prefs_shallow_hibernation_title">Shallow Hibernation (experimental)</string>
    <string name="prefs_xposed_features_summary">Require Xposed framework to work</string>
    <string name="prefs_xposed_features_title">Xposed-based Features</string>
    <string name="prefs_labs_doze_description">"Enter doze mode in minutes (instead of hours stationary normally) after the screen goes off if not charging, to improve its power-saving efforts.

Doze mode is a new power saving mechanism introduced in Android 6.0. In this mode, background behaviors of all apps (except white-listed) are strictly prohibited, until next user interaction or charging. The device will also periodically (in hours) exit doze mode briefly."</string>
    <string name="prefs_labs_navbar_gesture_summary">"Long-press the center button in bottom navigation bar to hibernate apps and lock screen, or just lock screen.
Beware, this feature may be incompatible with Smart Lock and finger-print unlock."</string>
    <string name="prefs_alt_screen_off_summary">"Use alternative method to turn off screen, slower but compatible with Smart Lock and fingerprint unlock.
It may not work on some devices."</string>
    <string name="prefs_alt_screen_off_title">Alternative Screen Off Mode</string>
    <string name="prefs_doze_whitelist_summary">Apps in the white list will not be affected by Doze mode (including the normal doze in Android). They also do not support Shallow Hibernation.</string>
    <string name="prefs_doze_whitelist_title">White list</string>
    <string name="url_about_shallow_hibernation">http://greenify.uservoice.com/knowledgebase/articles/828357</string>
    <string name="url_about_super_doze">http://greenify.uservoice.com/knowledgebase/articles/828360</string>
</resources>