<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@android:style/TextAppearance.Large" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/guide_title" android:drawableLeft="@mipmap/ic_launcher" android:drawablePadding="12.0dip" />
    <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="6.0dip" />
    <TextView android:textAppearance="@android:style/TextAppearance.Medium" android:textColor="@android:color/darker_gray" android:gravity="center_vertical" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/guide_sub_title" />
    <Button android:enabled="false" android:gravity="center" android:id="@id/btn_install_xposed" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="24.0dip" android:text="@string/guide_btn_install_xposed_installer" />
    <Button android:enabled="false" android:gravity="center" android:id="@id/btn_setup_framework" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="24.0dip" android:text="@string/guide_btn_setup_xposed_framework" />
    <Button android:enabled="false" android:gravity="center" android:id="@id/btn_activate_module" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="24.0dip" android:text="@string/guide_btn_activate_module" />
    <TextView android:textStyle="italic" android:layout_gravity="right" android:id="@id/link_why" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/guide_link_why_xposed" />
</LinearLayout>