<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:layout_gravity="center" android:orientation="vertical" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@android:style/TextAppearance.Large" android:textStyle="bold" android:textColor="#ff339900" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wizard_step_greenify" android:singleLine="true" android:drawableLeft="@drawable/step1" android:drawablePadding="16.0dip" android:fontFamily="sans-serif-condensed" />
    <TextView android:textAppearance="@android:style/TextAppearance.Medium" android:textSize="18.0sp" android:gravity="left" android:paddingLeft="48.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wizard_step_greenify_desc" android:fontFamily="sans-serif-condensed" />
    <TextView android:textAppearance="@android:style/TextAppearance.Large" android:textStyle="bold" android:textColor="#ffff6600" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wizard_step_enjoy" android:singleLine="true" android:drawableLeft="@drawable/step2" android:drawablePadding="16.0dip" android:fontFamily="sans-serif-condensed" />
    <TextView android:textAppearance="@android:style/TextAppearance.Medium" android:textSize="18.0sp" android:gravity="left" android:paddingLeft="48.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wizard_step_enjoy_desc" android:fontFamily="sans-serif-condensed" />
    <TextView android:textAppearance="@android:style/TextAppearance.Large" android:textStyle="bold" android:textColor="#ff00b5e5" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wizard_step_forget" android:singleLine="true" android:drawableLeft="@drawable/step3" android:drawablePadding="16.0dip" android:fontFamily="sans-serif-condensed" />
    <TextView android:textAppearance="@android:style/TextAppearance.Medium" android:textSize="18.0sp" android:gravity="left" android:paddingLeft="48.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wizard_step_forget_desc" android:fontFamily="sans-serif-condensed" />
</LinearLayout>