<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/inner" android:background="@android:color/white" android:paddingLeft="24.0dip" android:paddingTop="16.0dip" android:paddingRight="24.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="1000.0dip">
        <TextView android:textAppearance="@android:style/TextAppearance.Holo.Large" android:textColor="@android:color/holo_blue_light" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/showcase_manual_hibernation_title" />
        <TextView android:textAppearance="@android:style/TextAppearance.Holo" android:textColor="@android:color/black" android:id="@id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/showcase_manual_hibernation_desc" />
        <TextView android:textAppearance="@android:style/TextAppearance.Holo" android:textColor="@android:color/black" android:id="@id/automation" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/showcase_manual_hibernation_automation" />
        <Button android:id="@id/accessibility" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/showcase_accessibility_setting" />
    </LinearLayout>
</FrameLayout>